deployment/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      nodeSelector:
        nodepool: dev
      containers:
      - name: spring-boot
        image: belalkhozeim22/spring-boot-app-image:latest
        ports:
        - containerPort: 8080
